--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 MovieSwiftUI.xcodeproj/xcuserdata/work.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 MovieSwiftUI.xcodeproj/project.xcworkspace/xcuserdata/work.xcuserdatad/UserInterfaceState.xcuserstate
 MovieSwiftUI.xcodeproj/xcuserdata/work.xcuserdatad/xcschemes/xcschememanagement.plist
+MovieSwiftUI.xcodeproj/project.xcworkspace/xcuserdata/
+MovieSwiftUI.xcodeproj/xcuserdata/work.xcuserdatad/
