--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 MovieSwiftUI.xcodeproj/xcuserdata/work.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 MovieSwiftUI.xcodeproj/project.xcworkspace/xcuserdata/work.xcuserdatad/UserInterfaceState.xcuserstate
+MovieSwiftUI.xcodeproj/xcuserdata/work.xcuserdatad/xcschemes/xcschememanagement.plist
