--- a/MovieSwiftUI.xcodeproj/xcshareddata/xcschemes/MovieSwiftUI.xcscheme
+++ b/MovieSwiftUI.xcodeproj/xcshareddata/xcschemes/MovieSwiftUI.xcscheme
@@ -53,8 +53,8 @@
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "OS_ACTIVITY_MODE"
-            value = ""
-            isEnabled = "NO">
+            value = "disable"
+            isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
    </LaunchAction>
