movie by genre: fetch data

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ MovieSwiftUI.xcodeproj/project.xcworkspace/xcuserdata/work.xcuserdatad/UserInter
 MovieSwiftUI.xcodeproj/xcuserdata/work.xcuserdatad/xcschemes/xcschememanagement.plist
 MovieSwiftUI.xcodeproj/project.xcworkspace/xcuserdata/
 MovieSwiftUI.xcodeproj/xcuserdata/work.xcuserdatad/
+MovieSwiftUI.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/
